<resources>
    <string name="app_name">ГазКонтакт</string>
    <string name="logo_title">Logp</string>
    <string name="settings_res">Настройки</string>
    <string name="update_database_res">Обновление БД</string>
    <string name="contactData">Контактные данные</string>
    <string name="mobileType">Мобильный</string>
    <string name="workType">Рабочий</string>
    <string name="homeType">Домашний</string>
    <string name="email">E-mail</string>
    <string name="addContact">Добавить контакт</string>
    <string name="phoneNumber">Мобильный телефон</string>
    <string name="middleName">Отчество</string>
    <string name="name">Имя</string>
    <string name="cancel">Отмена</string>
    <string name="addAction">Добавить</string>
    <string name="addingContact">Добавление контакта</string>
    <string name="lastname">Фамилия</string>
    <string name="databaseLoadingAction">База данных загружается…</string>
    <string name="wait">Пожалуйста, подождите</string>
    <string name="download">Загрузить</string>
    <string name="notification">Уведомление</string>
    <string name="databaseMissing">
        База данных контактов не была найдена на вашем устройстве.
        Вы можете загрузить последнюю версию, нажав на кнопку ниже.
        Для загрузки базы данных требуется подключение к сети организации.
        База для <b>Витебскоблгаза</b> в данной версии приложения недоступна для просмотра.
    </string>
    <string name="reportToDeveloper">
        Если вы видите данное сообщение после установки базы данных, обратитесь к разработчикам.
    </string>
    <string name="search_alert">Нажмите на поле поиска для ввода</string>
    <string name="coming_birthday">Дни рождения</string>
    <string name="update_warning">
        Вы собираетесь загрузить последнюю версию базы данных контактов.
        Перед загрузкой убедитесь, что на вашем устройстве достаточно свободного пространства (требуется ~50мб).
        Для загрузки ваше устройство должно быть подключено к сети предприятия.
    </string>
</resources>
